...
        app:layout_constraintStart_toEndOf="@+id/item_head_indent_container"
        app:layout_constraintEnd_toStartOf="@+id/item_head_title" />

    <!-- Title -->
    <com.orgzly.android.ui.views.richtext.RichText
        android:id="@+id/item_head_title"
        app:view_id="@+id/item_head_title_view"
        app:edit_id="@+id/item_head_title_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="?attr/item_head_title_text_size"
        android:minHeight="@dimen/bullet_total_size"
        app:layout_constraintTop_toTopOf="@id/item_head_first_line_anchor"
...
    <ImageView
        android:id="@+id/item_head_book_name_icon"
        android:layout_width="?attr/item_head_info_icon_size"
        android:layout_height="0dp"
        android:src="@drawable/ic_folder_open"
        app:layout_constraintTop_toBottomOf="@+id/item_head_title"
        app:layout_constraintBottom_toBottomOf="@+id/item_head_book_name_text"
        app:layout_constraintStart_toStartOf="@+id/item_head_title" />
    <TextView
        android:id="@+id/item_head_book_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
...
        app:layout_constraintEnd_toStartOf="@+id/item_head_fold_button_text"
        tools:text="@string/note_closed_sample" />

    <!-- Content -->
    <com.orgzly.android.ui.views.richtext.RichText
        android:id="@+id/item_head_content"
        app:view_id="@+id/item_head_content_view"
        app:edit_id="@+id/item_head_content_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="?attr/item_head_sub_title_content_text"
        app:layout_constraintTop_toBottomOf="@+id/item_head_closed_text"
        app:layout_constraintStart_toStartOf="@+id/item_head_title"
...
        app:editable="false"
        android:inputType="textMultiLine"
        android:visibility="visible" />

    <!-- Folding button -->
    <View
        android:id="@+id/item_head_fold_button"
        android:layout_width="@dimen/fold_button_width"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/item_head_top"
        app:layout_constraintBottom_toBottomOf="@+id/item_head_bottom"
        app:layout_constraintEnd_toEndOf="parent" />

...
