...
            android:textSize="?attr/font_micro"
            android:textAllCaps="true"
            android:text="@string/timestamp_dialog_day"/>

        <!-- Date -->
        <Button
            android:id="@+id/date_picker_button"
            style="@style/Button.TimestampDialog"
            app:layout_constraintTop_toBottomOf="@+id/date_picker_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/dialog_timestamp_date_sample" />

...
        <TextView
            android:id="@+id/time_picker_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tomorrow_button"
            app:layout_constraintStart_toStartOf="@+id/time_picker_button"
            app:layout_constraintEnd_toEndOf="@+id/time_picker_button"
            android:gravity="center"
            android:textSize="?attr/font_micro"
            android:textAllCaps="true"
            android:text="@string/timestamp_dialog_time"/>

...
